force-app/main/default/objects/Account/fields/FinServ__PersonalInterests__c.field-meta.xml
<CustomField>
    <fullName>FinServ__PersonalInterests__c</fullName>
    <label>Personal Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boating</fullName>
            </value>
            <value>
                <fullName>College Basketball</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Craft Beer</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Foodies</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Hockey</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Skiing and Snowboarding</fullName>
                <label>Skiing/Snowboarding</label>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Other (Explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>