force-app/main/default/objects/Account/fields/FinServ__ReviewFrequency__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ReviewFrequency__c</fullName>
    <label>Review Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Semi Annually</fullName>
            </value>
            <value>
                <fullName>Biannually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>