force-app/main/default/objects/Account/fields/FinServ__RiskTolerance__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RiskTolerance__c</fullName>
    <label>Risk Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Low-Medium</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Medium-High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>