force-app/main/default/objects/Account/fields/FinServ__TimeHorizon__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TimeHorizon__c</fullName>
    <label>Time Horizon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-2 Years</fullName>
            </value>
            <value>
                <fullName>3-4 Years</fullName>
            </value>
            <value>
                <fullName>5-9 Years</fullName>
            </value>
            <value>
                <fullName>10-20 Years</fullName>
            </value>
            <value>
                <fullName>21+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>