force-app/main/default/objects/Account/fields/FinServ__TotalInsuranceJointOwner__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalInsuranceJointOwner__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value of all insurance policies for which the client is the joint owner.</description>
    <label>Total Insurance Joint Owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>