force-app/main/default/objects/Account/fields/FinServ__TotalOutstandingCreditJointOwner__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalOutstandingCreditJointOwner__c</fullName>
    <label>Total Outstanding Credit - Joint Owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>