force-app/main/default/objects/Account/fields/Form_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Form_Last_Updated__c</fullName>
    <description>CRM-5806</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Form Last Updated</label>
    <type>DateTime</type>
</CustomField>