force-app/main/default/objects/Account/fields/Form_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Form_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM-5806</description>
    <label>Form Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>