force-app/main/default/objects/Account/fields/FP_LastCompletedActivity__c.field-meta.xml
<CustomField>
    <fullName>FP_LastCompletedActivity__c</fullName>
    <description>Updated by ProcessBuilder, when a task is completed by an FP, this field captures the datetime.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FP Last Activity Completed</label>
    <type>DateTime</type>
</CustomField>