force-app/main/default/objects/Account/fields/GEC_Last_Modified_Datetime__c.field-meta.xml
<CustomField>
    <fullName>GEC_Last_Modified_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GEC Last Modified Datetime</label>
    <type>DateTime</type>
</CustomField>