force-app/main/default/objects/Account/fields/Interaction_Engagement_Count__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Engagement_Count__c</fullName>
    <formula>If( Interaction_Status__c = &quot;Completed&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Engagement Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>