force-app/main/default/objects/Account/fields/Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Status__c</fullName>
    <formula>IF ( ISBLANK( Next_Account_Team_Interaction__c ) , &quot;&quot;, 
IF (VALUE( SUBSTITUTE( Next_Account_Team_Interaction__c , &quot; Days&quot;, &quot;&quot;) ) &gt; 0, &quot;Completed&quot;, &quot;Overdue&quot;)
)</formula>
    <label>Interaction Status</label>
    <type>Text</type>
</CustomField>