force-app/main/default/objects/Account/fields/ITF__c.field-meta.xml
<CustomField>
    <fullName>ITF__c</fullName>
    <description>Agency-6 - New field to support Nominee Account Record Type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>In Trust For</inlineHelpText>
    <label>ITF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>