force-app/main/default/objects/Account/fields/Last_Account_Team_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Team_Interaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Account Team Interaction</label>
    <type>DateTime</type>
</CustomField>