force-app/main/default/objects/Account/fields/Last_Authentication_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Authentication_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Authentication Date</label>
    <type>DateTime</type>
</CustomField>