force-app/main/default/objects/Account/fields/Last_Authentication_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Authentication_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Authentication Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>