force-app/main/default/objects/Account/fields/Last_Business_Money_Builder_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Business_Money_Builder_Date__c</fullName>
    <description>CRM-6479 - References the last date a BMB was completed for the Profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Business Money Builder Date</label>
    <type>Date</type>
</CustomField>