force-app/main/default/objects/Account/fields/Last_Digital_Code_Lockout_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Digital_Code_Lockout_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Digital Code Lockout Date</label>
    <type>DateTime</type>
</CustomField>