force-app/main/default/objects/Account/fields/Last_Money_Chat_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Money_Chat_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Money Chat Date</label>
    <type>Date</type>
</CustomField>