force-app/main/default/objects/Account/fields/Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Created</label>
    <type>Checkbox</type>
</CustomField>