force-app/main/default/objects/Account/fields/Legal_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Legal_Address_Formula__c</fullName>
    <description>Agency-143 - Displays Legal Street &amp; Prov for Business, Broker, Person</description>
    <formula>CASE(RecordType_Name__c, &apos;Person Account&apos;, PersonOtherStreet &amp;&apos; &apos;&amp; PersonOtherCity &amp;&apos; &apos;&amp; PersonOtherState, &apos;Broker&apos;, BillingStreet &amp;&apos; &apos;&amp; BillingCity &amp;&apos; &apos;&amp; BillingState, &apos;Business&apos;, BillingStreet &amp;&apos; &apos;&amp; BillingCity &amp;&apos; &apos;&amp; BillingState, &apos;&apos;)</formula>
    <label>Legal Address</label>
    <type>Text</type>
</CustomField>