force-app/main/default/objects/Account/fields/LGD_Rating__c.field-meta.xml
<CustomField>
    <fullName>LGD_Rating__c</fullName>
    <description>CRM-3186</description>
    <label>LGD Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>BR1</fullName>
                <isActive>false</isActive>
                <label>BR1</label>
            </value>
            <value>
                <fullName>BR2</fullName>
                <isActive>false</isActive>
                <label>BR2</label>
            </value>
            <value>
                <fullName>BR3</fullName>
                <isActive>false</isActive>
                <label>BR3</label>
            </value>
            <value>
                <fullName>Default</fullName>
                <isActive>false</isActive>
                <label>Default</label>
            </value>
            <value>
                <fullName>K</fullName>
                <isActive>false</isActive>
                <label>K</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>