force-app/main/default/objects/Account/fields/Life_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Life_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1536 - checkbox field to confirm this is a Life Prospect record. Only Sys Admins and Life User profile can edit this field. All other Users can view.</description>
    <inlineHelpText>Field is Checked when a Life User creates the Prospect record.</inlineHelpText>
    <label>Life Prospect?</label>
    <type>Checkbox</type>
</CustomField>