force-app/main/default/objects/Account/fields/Life_Stage__c.field-meta.xml
<CustomField>
    <fullName>Life_Stage__c</fullName>
    <label>Life Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building my Career</fullName>
            </value>
            <value>
                <fullName>Enjoying Retirement</fullName>
            </value>
            <value>
                <fullName>Exploring my Options</fullName>
            </value>
            <value>
                <fullName>Going to School</fullName>
            </value>
            <value>
                <fullName>Maintaining my Career</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>