force-app/main/default/objects/Account/fields/Mailing_Street_Formula__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Formula__c</fullName>
    <description>Used to show the street info for both Business and Person Accounts
Business : ShippingStreet
Person: PersonMaillingStreet</description>
    <formula>IF (IsPersonAccount = True, PersonMailingStreet, ShippingStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Street</label>
    <type>Text</type>
</CustomField>