force-app/main/default/objects/Account/fields/MDM_Classification__c.field-meta.xml
<CustomField>
    <fullName>MDM_Classification__c</fullName>
    <label>MDM Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Non-Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>