force-app/main/default/objects/Account/fields/MDM_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_ID__c</fullName>
    <description>Data Migration - CRM 349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MDM ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>